# fastaqc

./: README.rst  requirements.txt  setup.cfg
fastaqc/: alphabet.py  main.py
