[metadata]
name = fastaqc
author = Lukas Jelonek
author-email = Lukas.Jelonek@computational.bio.uni-giessen.de
description = A tool to extract information out of fasta files
description-file = README.rst
project_urls =
    Source Code = https://git.computational.bio.uni-giessen.de/SOaAS/dbxref
keywords = fasta, qualitycontrol, qc
license = MIT

[files]
packages = fastaqc

[entry_points]
console_scripts = 
    fastaqc = fastaqc.main:main
